--- a/02_Inner_Products_and_Norms/044-clustering.ipynb
+++ b/02_Inner_Products_and_Norms/044-clustering.ipynb
@@ -130,11 +130,11 @@
     "\n",
     "Forutunately, the *k-means algorithm* we will introduce next can be run efficiently on very large problems, and often finds very good clusterings that achieve objective values $J_{\\text{clust}}$ near the smallest possible value. Because k-means finds *suboptimal* solutions, we call it a *heuristic*. Heuristics are often looked down on in more theory oriented circles because they cannot guarantee the quality of their solutions, but as we will see, they often work incredibly well in practice!\n",
     "\n",
-    "## The K-Means Algorithm\n",
+    "# The K-Means Algorithm\n",
     "\n",
     "The idea behind k-means is to break down the overall hard problem of choosing the best representatives and clusterings at the same time into two subproblems we can easily solve effectively. While we can't yet solve the problem of jointly choosing group assignments of group representatives to minimize $J_{\\text{clust}}$, we know how to solve for one component when the other is fixed.\n",
     "\n",
-    "### Partitioning vectors with representatives fixed\n",
+    "## Partitioning vectors with representatives fixed\n",
     "\n",
     "Pretend for a moment that we have already found group representatives $\\vv{z_1}, ..., \\vv{z_k}$, and our task is to pick the group assignments $c_1, ..., c_N$ which lead to the smallest possible $J_{\\text{clust}}$. This problem is actually very easy! We will use the idea of [nearest neighbors](#distance-nearest_neighbors) we saw in the previous section.\n",
     "\n",
@@ -152,7 +152,7 @@
     "\n",
     "This should look familiar! Modulo our new notation, we should asign $\\vv{x_i}$ to its [nearest neighbor](#distance-nearest_neighbors) among the representatives.\n",
     "\n",
-    "### Optimizing the group representatives with assignments fixed\n",
+    "## Optimizing the group representatives with assignments fixed\n",
     "\n",
     "Now we flip things around, and assume each vector $\\vv{x_i}$ has been assigned to a group $c_i$. How should we pick group representatives $\\vv{z_1}, ..., \\vv{z_k}$ to minimize $J_{\\text{clust}}$? We start be rearranging our objectives into $k$ sums, one for each group:\n",
     "\n",
@@ -170,7 +170,7 @@
     "\n",
     "Here $|G_j|$ is the *cardinality of the set $G_j$*, and denotes the number of elements in the set $G_j$, i.e., the size of group $j$.\n",
     "\n",
-    "### Pseudocode for the k-means algorithm\n",
+    "## Pseudocode for the k-means algorithm\n",
     "\n",
     "While we can't yet solve the problem of jointly choosing group assignments & group representatives $J_{\\text{clust}}$, we know how to solve for one component when the other is fixed. \n",
     "\n",
@@ -220,11 +220,11 @@
     "* For the implementation of k-means given above, there is also no guarantee that it will converge to a solution quickly; it might take a long time (even exponentially long in the number of clusters) to converge for some inputs.\n",
     ":::\n",
     "\n",
-    "### A toy example using Python and scikit-learn\n",
+    "## A toy example using Python and scikit-learn\n",
     "\n",
     "The ```scikit-learn``` library in Python gives an implementation of the k-means algorithm. Documentation is available [here](#https://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans).\n",
     "\n",
-    "In the following code, we generate a sample clustering problem with $N = 600$ and $k = 3$. We then run k-means, plot some intermediate clusterings, and plot the final clusteringing. We also plot the rate of convergence (k-means loss vs. number of iterations)."
+    "In the following code, we generate a sample clustering problem with $N = 600$ and $k = 3$. We then run k-means, plot some intermediate clusterings, and plot the final clustering. We also plot the rate of convergence (k-means loss vs. number of iterations)."
    ]
   },
   {
@@ -325,6 +325,15 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## An example with automated topic discovery\n",
+    "\n",
+    "TODO"
    ]
   }
  ],
