restructured clustering lesson

--- a/02_Inner_Products_and_Norms/044-clustering.ipynb
+++ b/02_Inner_Products_and_Norms/044-clustering.ipynb
@@ -220,7 +220,7 @@
     "* For the implementation of k-means given above, there is also no guarantee that it will converge to a solution quickly; it might take a long time (even exponentially long in the number of clusters) to converge for some inputs.\n",
     ":::\n",
     "\n",
-    "## A toy example using Python and scikit-learn\n",
+    "# Example: K-Means using Python and scikit-learn\n",
     "\n",
     "The ```scikit-learn``` library in Python gives an implementation of the k-means algorithm. Documentation is available [here](#https://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans).\n",
     "\n",
@@ -331,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## An example with automated topic discovery\n",
+    "# Example: Automated Topic Discovery\n",
     "\n",
     "TODO"
    ]
