--- a/02_Inner_Products_and_Norms/041-inner.ipynb
+++ b/02_Inner_Products_and_Norms/041-inner.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: Inner Products\n",
+    "title: Inner Products and Induced Norms\n",
     "subject: Inner Products and Norms\n",
-    "subtitle: generalizing dot product\n",
-    "short_title: Inner Products\n",
+    "subtitle: Generalizing dot products and lengths\n",
+    "short_title: Inner Products and Induced Norms\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -50,9 +50,17 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- what is an inner product on vector spaces\n",
-    "- what is the norm induced norm by the inner product\n",
-    "- examples of inner products"
+    "- What is an inner product on a vector space?\n",
+    "- What is a norm induced by an inner product?\n",
+    "- What are some important examples of inner products?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "856723de",
+   "metadata": {},
+   "source": [
+    "In the previous section, we generalized how we add and scale vectors in $\\mathbb{R}^2$ and $\\mathbb{R}^3$ to general Euclidean spaces $\\mathbb{R}^n$, and more general vector spaces $V$. In this section, we bring over other key concepts from $\\mathbb{R}^2$ and $\\mathbb{R}^3$ to vector spaces, namely the ideas of angle, length, and distance. In vector spaces, these notions are built up from the idea of *inner products*."
    ]
   },
   {
@@ -60,48 +68,73 @@
    "id": "a1b52c01-f3b4-4b43-baeb-f97bc73802a8",
    "metadata": {},
    "source": [
-    "## From Dot product to Inner product\n",
+    "# The Dot Product and the Euclidean Norm\n",
     "\n",
-    "A familiar example of an inner-product for vectors in $\\mathbb{R}^n$ is the _dot product_. For two vectors $\\vv v, \\vv w \\in \\mathbb{R}^n$, their _dot product_ is defined as\n",
+    "In this section, we focus on Euclidean space $\\mathbb{R}^n$. A familiar example of an inner-product for vectors in $\\mathbb{R}^n$ is the _dot product_:\n",
+    "\n",
+    ":::{prf:definition} The Dot Product \n",
+    ":label: dot-product-defn\n",
+    "For two vectors $\\vv v, \\vv w \\in \\mathbb{R}^n$, their _dot product_ is defined as\n",
     "\\begin{equation}\n",
     "\\label{dot}\n",
-    "\\vv v . \\vv w = v_1 w_1 + v_2 w_2 + \\ldots + v_n w_n\n",
+    "\\vv v \\cdot \\vv w = v_1 w_1 + v_2 w_2 + \\ldots + v_n w_n\n",
     "\\end{equation}\n",
-    "From [](#dot), note that $\\vv v \\vv w = \\vv v^{\\top} \\vv w = \\vv w^{\\top} \\vv v$: written as a row-vector clumn-vector product.\n",
+    "From [](#dot), note that $\\vv v \\cdot \\vv w = \\vv v^{\\top} \\vv w = \\vv w^{\\top} \\vv v$; in other words, the dot product can be written as a row-vector column-vector product.\n",
+    ":::\n",
     "\n",
     "```{note}\n",
     "A key property of the dot product is that \n",
     "\\begin{equation}\n",
     "\\label{dot_prop}\n",
-    "\\vv v . \\vv v = \\vv v^{\\top} \\vv v = v_1^2 + v_2^2 + \\ldots + v_n^2,\n",
+    "\\vv v \\cdot \\vv v = \\vv v^{\\top} \\vv v = v_1^2 + v_2^2 + \\ldots + v_n^2\n",
     "\\end{equation}\n",
-    "that is, the dot product of a vector $\\vv v$ with itself is given by the sum of the square of its entries.\n",
+    "That is, the dot product of a vector $\\vv v$ with itself is given by the sum of the squares of its entries.\n",
     "```\n",
     "\n",
-    "The Pythagorean theorem extends to $n-$dimensional space and tells us that $\\vv v . \\vv v$ is the square of the length of $\\vv v$. We use this observation to define the _Eucledian norm_ (or length) $\\| \\vv v \\|$ of a vector $\\vv v$ to be\n",
+    "The Pythagorean theorem extends to $n-$dimensional space and tells us that $\\vv v \\cdot \\vv v$ is the square of the length of $\\vv v$. We use this observation to define the _Euclidean norm_:\n",
+    "\n",
+    ":::{prf:definition} The Euclidean Norm\n",
+    ":label: euclidean-norm-defn\n",
+    "For a vector $\\vv v \\in \\mathbb{R}^n$, its *Euclidean norm, or length,* denoted as $\\|\\vv v\\|$, is defined as\n",
+    "\n",
     "\\begin{equation}\n",
     "\\label{euc_norm}\n",
-    "\\| \\vv v \\| = \\sqrt{\\vv v^{\\top} \\vv v} = \\sqrt{v_1^2 + v_2^2 + \\ldots + v_n^2}.\n",
+    "\\| \\vv v \\| = \\sqrt{\\vv v\\cdot \\vv v} = \\sqrt{v_1^2 + v_2^2 + \\ldots + v_n^2}.\n",
     "\\end{equation}\n",
-    "This generalizes our idea of length from $\\mathbb{R}^2$ and $\\mathbb{R}^3$ to $\\mathbb{R}^n$.\n",
+    ":::\n",
+    "\n",
+    "In $\\mathbb{R}^2$, the formula for Euclidean norm looks a lot like the familiar Pythagorean theorem! This generalizes our idea of length from $\\mathbb{R}^2$ and $\\mathbb{R}^3$ to $\\mathbb{R}^n$.\n",
     "\n",
     ":::{figure}../figures/04-euc_norm.png\n",
     ":label:euc_norm\n",
-    ":alt: Eucledian Norm\n",
+    ":alt: Euclidean Norm\n",
     ":width: 500px\n",
     ":align: center\n",
     ":::\n",
     "\n",
-    "```{note} Properties of length\n",
-    "The Eucledian norm $\\| \\vv v \\|$ has the same intuitive properties of a length. For example,\n",
-    "1. If $\\vv v \\neq \\vv 0$, then $\\| \\vv v\\| > 0$ (all non zero vectors have positive length)\n",
-    "2. $\\| \\vv v\\| = 0$ if and only if $\\vv v = \\vv 0$ (only the zero vector has zero length)\n",
+    "````{exercise}  Dot product of 2 vectors in $\\mathbb{R}^3$\n",
+    ":label: distance-ex1\n",
+    "\n",
+    "Find the dot product of $\\bm 1\\\\ 2 \\\\ 3 \\em$ and $\\bm 4 \\\\ 5\\\\ 6 \\em$.\n",
+    "\n",
+    "```{solution} distance-ex1\n",
+    ":class: dropdown\n",
+    "\n",
+    "We have\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\bm 1\\\\ 2 \\\\ 3 \\em \\cdot \\bm 4 \\\\ 5\\\\ 6 \\em = 1(4) + 2(5) + 3(6) = \\boxed{32}\n",
+    "\\end{align*}\n",
     "```\n",
+    "````\n",
     "\n",
-    "The above properties follow from the more abstract definition for general vector spaces.\n",
+    "# Inner Products\n",
     "\n",
-    ":::{prf:definition} Inner Product\n",
+    "In this section, we introduce the generalization of the [dot product](#dot-product-defn): inner products. The definition of inner products takes the most fundamental properties of the dot product (which is only defined for vectors living in Euclidean space $\\mathbb{R}^n$), and abstracts it for more general vector spaces.\n",
+    "\n",
+    ":::{prf:definition} Inner Products\n",
     ":label: inner_defn\n",
+    "\n",
     "An inner product on the real vector space $V$ is a pairing that takes two vectors $\\vv v, \\vv w \\in V$ and produces a real number $\\langle \\vv v, \\vv w\\rangle \\in \\mathbb{R}$. The inner product is required to satisfy the following three axioms for all $\\vv u, \\vv v, \\vv w \\in V$, and scalars $c, d \\in \\mathbb{R}$.\n",
     "1. *Bilinearity*\n",
     "\\begin{equation}\n",
@@ -109,38 +142,156 @@
     "\\langle c \\vv u + d \\vv v, \\vv w \\rangle &= c \\langle \\vv u, \\vv w \\rangle + d \\langle \\vv v, \\vv w \\rangle, \\\\\n",
     "\\langle \\vv u, c \\vv v + d \\vv w \\rangle &= c \\langle \\vv u, \\vv v \\rangle + d \\langle \\vv u, \\vv w \\rangle.\n",
     "\\end{equation}\n",
+    "\n",
+    "(This is saying that inner products must be linear in their first argument when the second argument is fixed, and vice versa. Note that this does NOT mean that inner products are linear in both arguments together; if you scale both arguments by a factor of 2, the inner product is scaled by a factor of 4!)\n",
+    "\n",
     "2. *Symmetry*\n",
     "\\begin{equation}\n",
     "\\label{symm}\n",
     "\\langle \\vv v , \\vv w \\rangle &= \\langle \\vv w , \\vv v \\rangle. \n",
     "\\end{equation}\n",
+    "\n",
     "3. *Positivity*\n",
     "\\begin{equation}\n",
     "\\label{pos}\n",
     "\\langle \\vv v , \\vv v \\rangle > 0 \\ \\textrm{whenever} \\ \\vv v \\neq \\vv 0, \\ \\textrm{while} \\ \\langle \\vv 0, \\vv 0 \\rangle = 0. \n",
     "\\end{equation}\n",
-    "\n",
     ":::\n",
-    "An inner product allows us to define notions of angle, length, and distance in a vector space. When a vector space is equipped with an inner product, we call it an _inner product space_.\n",
+    "\n",
+    "You should verify that the _dot product_ satisfies [](#inner_defn). \n",
     "\n",
     "```{warning}\n",
     "A vector space can admit many different inner products. It is therefore necessary (and polite) to specify which inner product is being used when defining an inner product space.\n",
     "```\n",
     "\n",
-    "You should verify that the _dot product_ satisfies [](#inner_defn). \n",
+    ":::{prf:example} Weighted dot product\n",
+    ":label: weighted-dot-product-ex\n",
     "\n",
-    "We can also define a norm induced by a general inner-product as $\\| \\vv v \\| = \\sqrt{\\langle \\vv v, \\vv v\\rangle}$. The positivity axiom ensures that $\\|\\vv v \\| \\geq 0$ for all $\\vv v \\in V$, and that $\\|\\vv v\\| = \\vv 0$ if and only if $\\vv v = \\vv 0$. \n",
+    "Let's define a different inner product on $\\mathbb{R}^2$. Instead of the typical dot product, let's consider a *weighted dot product*:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\langle \\vv v, \\vv w \\rangle = 2v_1w_1 + 5v_2w_2\n",
+    "\\end{align*}\n",
+    "\n",
+    "for $\\vv v = \\bm v_1 \\\\ v_2 \\em,\\vv w = \\bm w_1 \\\\ w_2\\em$. Let's verify that this is indeed an [inner product](#inner_defn) by checking that it satisfies the 3 axioms:\n",
+    "\n",
+    "1. **Bilinearity.** For any scalars $c, d$ and vectors $\\vv u, \\vv v, \\vv w$,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\langle c \\vv u + d \\vv v, \\vv w\\rangle &= 2(c u_1 + d v_1)w_1 + 5(c u_2 + d v_2) w_2\\\\\n",
+    "    &= c(2 u_1 w_1 + 5 u_2w_2) + d(2 v_1w_1 + 5 v_2 w_2)\\\\\n",
+    "    &= c \\langle \\vv u, \\vv w \\rangle + d\\langle \\vv v, \\vv w \\rangle\n",
+    "\\end{align*}\n",
+    "\n",
+    "Hence $\\langle \\cdot, \\cdot \\rangle$ is linear in its first argument when the second one is fixed. Try to prove that $\\langle \\cdot, \\cdot \\rangle$ is linear in its second argument when the first one is fixed (the proof should look very similar!). This will show bilinearity.\n",
+    "\n",
+    "2. **Symmetry.**\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\langle \\vv u, \\vv v\\rangle &= 2 u_1 v_1 + 5 u_2v_2 \\\\\n",
+    "    &= 2 v_1 u_1 + 5 v_2u_2\\\\\n",
+    "    &= \\langle \\vv v, \\vv u\\rangle\n",
+    "\\end{align*}\n",
+    "\n",
+    "This shows symmetry.\n",
+    "\n",
+    "3. **Positivity.**\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\langle \\vv v, \\vv v\\rangle &= 2 v_1^2 v_1 + 5 v_2^2\n",
+    "\\end{align*}\n",
+    "\n",
+    "If $\\vv v = \\vv 0$, then clearly this expression is zero because all terms are zero. On the other hand, if either component of $\\vv v$ is nonzero, then this expression is strictly positive. This shows positivity.\n",
+    "\n",
+    "Therefore the weighted dot product above is indeed an inner product.\n",
+    "\n",
+    "We can generalize this example to $\\mathbb{R}^n$ and arbitrary *positive* weights. Let $c_1, ..., c_n > 0$ we *postiive numbers*. Then the corresponding *weighted inner product on $\\mathbb{R}^n$* is defined to be \n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\langle \\vv v, \\vv w\\rangle = c_1v_1w_1 + ... + c_nv_nw_n\n",
+    "\\end{align*}\n",
+    "\n",
+    "The numbers $c_i > 0$ are called the *weights*. \n",
+    ":::\n",
+    "\n",
+    "An inner product allows us to define notions of angle, length, and distance in a vector space. When a vector space is equipped with an inner product, we call it an _inner product space_:\n",
+    "\n",
+    ":::{prf:definition} Inner Product Space\n",
+    ":label: inner-product-space-defn\n",
+    "An inner product space is a vector space $V$ equipped with an inner product $\\langle \\cdot, \\cdot \\rangle$ defined on $V$.\n",
+    ":::\n",
+    "\n",
+    ":::{prf:example} An inner product over a continuous function space\n",
+    ":label:continuous-functions-inner-product-ex\n",
+    "\n",
+    "We saw before that we can define vector spaces where vectors are doubly infinite sequences or even functions! We will not work with such functions spaces in the rest of the class, but you should know what we can define inner products on these vector spaces too!\n",
+    "\n",
+    "For example, recall we saw that $C^0[0, 1]$, the space of all continuous functions defined over the interval $[0, 1]$, is a vector space. A commonly used inner product on this space is\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\langle f, g\\rangle = \\int_{0}^{1}{f(t)g(t) \\:dt}\n",
+    "\\end{align*}\n",
+    "\n",
+    "for any two functions $f, g \\in C^0[0, 1]$. One can verify that this inner product satisfies [this definition](#inner_defn); we won't do that here but it isn't hard (just remember the properties of integration)!\n",
+    "\n",
+    "For some intuition, let's consider the sampled function versions $\\vv f, \\vv g \\in \\mathbb{R}^{T+1}$, where remember, we define\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\vv f = \\bm f(0) \\\\ f(\\tau) \\\\ \\vdots \\\\ f(T\\tau) \\em = \\bm f_1 \\\\ f_2 \\\\ \\vdots \\\\ f_{T+1} \\em,\n",
+    "    \\quad \\vv g = \\bm g(0) \\\\ g(\\tau) \\\\ \\vdots \\\\ g(T\\tau) \\em = \\bm g_1 \\\\ g_2 \\\\ \\vdots \\\\ g_{T+1} \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "for $\\tau$ a sampling time chosen so that $T\\tau = 1$, These two vectors live in $\\mathbb{R}^{T+1}$, and let's consider a [weighted inner product](#weighted-dot-product-ex) with all weights $c_i = \\tau$. Then the inner product between $\\vv f$ and $\\vv g$ is\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\langle \\vv f, \\vv g\\rangle &= \\tau f_1g_1 + \\tau f_1g_1 + ... + \\tau f_{T+1}g_{T+1}\\\\\n",
+    "    &= \\sum_{t = 0}^{T}{\\tau f(i\\tau) g(i\\tau)}\n",
+    "\\end{align*}\n",
+    "\n",
+    "This should remind your of how the Riemann integral for $h(t) = f(t)g(t)$ is defined. Indeed, if we let $\\tau \\to 0$, we recover the integral inner product defined above. Since our inner product $\\langle f, g\\rangle$ is an inner product for any $\\tau$, it shouldn't be too surprising that the integral inner product does too.\n",
+    "\n",
+    ":::\n",
+    "\n",
+    "# Norms Induced by an Inner Product \n",
+    "\n",
+    "Just as we learned how the dot product may be generalized to inner products, we will study how the Euclidean norm (which is induced by the dot product) can be generalized into *norms induced by inner products*. In a later section, we will take one step further in abstraction and introduce an even more general definition of a norm and normed vector space.\n",
+    "\n",
+    "Just as the [Euclidean norm](#euclidean-norm-defn) was defined as the square root of the dot product of a vector with itself, we can define the *norm induced by an inner product* as follows.\n",
+    "\n",
+    ":::{prf:definition} Norm induced by an inner product\n",
+    ":label: induced-norm-defn\n",
+    "\n",
+    "Let $V$ be an inner product space with the inner product $\\langle \\cdot, \\cdot \\rangle$. The *norm induced by the inner product $\\langle \\cdot, \\cdot \\rangle$* is defined as \n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\| \\vv v \\| = \\sqrt{\\langle \\vv v, \\vv v\\rangle}\n",
+    "\\end{align*}\n",
+    ":::\n",
+    "\n",
+    "The positivity axiom of [inner products](#inner_defn) ensures that $\\|\\vv v \\| \\geq 0$ for all $\\vv v \\in V$, and that $\\|\\vv v\\| = \\vv 0$ if and only if $\\vv v = \\vv 0$. \n",
+    "\n",
     "```{warning}\n",
-    "We are using the same norm symbol $\\| \\cdot \\|$ for many different norms. If we do not specify which norm/inner-product is being used, you should interpret this as a \"generic\" norm induced by a \"generic\" inner-product satisfying [](#inner_defn). The good news is that both behave in ways similar to the familiar inner product and Eucledian norm. \n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a30472b0-7c57-460c-9f0b-e210be8b9a3c",
-   "metadata": {},
-   "source": [
-    "## TODO Examples"
+    "We are using the same norm symbol $\\| \\cdot \\|$ for many different norms. If we do not specify which norm/inner-product is being used, you should interpret this as a \"generic\" norm induced by a \"generic\" inner-product satisfying [](#inner_defn). The good news is that both behave in ways similar to the familiar inner product and Euclidean norm. \n",
+    "```\n",
+    "\n",
+    ":::{prf:example} The norm induced by a [weighted dot product](#weighted-dot-product-ex)\n",
+    ":label: weighted-norm-product-ex\n",
+    "\n",
+    "Recall the inner product defined in [this example](#weighted-dot-product-ex),\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\langle \\vv u, \\vv v \\rangle = 2u_1v_1 + 5u_2v_2\n",
+    "\\end{align*}\n",
+    "\n",
+    "for vectors $\\vv u, \\vv v \\in \\mathbb{R}^2$. The [induced norm](#induced-norm-defn) by this inner product is\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\|\\vv v\\| = \\sqrt{\\langle \\vv v, \\vv v \\rangle} = \\sqrt{2v_2^2 + 5v_2^2}\n",
+    "\\end{align*}\n",
+    "\n",
+    "which assigns more weight to the second coordinate relative to the first. Like with the weighted dot product, this idea behind this *weighted norm* easily generalizes to $\\mathbb{R}^n$.\n",
+    "\n",
+    ":::"
    ]
   }
  ],
