rearranged distances/nearestneighbors page

--- a/02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
+++ b/02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
@@ -41,7 +41,8 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- What is the Euclidean distance between two vectors?"
+    "- What is the Euclidean distance between two vectors?\n",
+    "- What are the properties of a general distance function?"
    ]
   },
   {
@@ -73,6 +74,23 @@
     ":align: center\n",
     ":::\n",
     "\n",
+    "````{exercise}  Euclidean distance\n",
+    ":label: distance-ex1\n",
+    "\n",
+    "Find the Euclidean distance between $\\bm 1\\\\ 2 \\em$ and $\\bm 3 \\\\ 4 \\em$.\n",
+    "\n",
+    "```{solution} distance-ex1\n",
+    ":class: dropdown\n",
+    "\n",
+    "We have\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\text{dist}\\left(\\bm 1\\\\ 2 \\em, \\bm 3\\\\ 4 \\em\\right) = \\left\\| \\bm 1\\\\ 2 \\em - \\bm 3\\\\ 4 \\em \\right\\| = \\sqrt{ (1 - 3)^2 + (2 - 4)^2} =\\boxed{2\\sqrt 2}\n",
+    "\\end{align*}\n",
+    "\n",
+    "```\n",
+    "````\n",
+    "\n",
     "# General Distances\n",
     "\n",
     "In this course, we will only work with the Euclidean distance. However, given any vector space with a general norm (i.e., $\\mathbb{R}^n$ with the Euclidean norm), we may construct a distance function as the norm of their difference. This leads us to a more general notion of distances:\n",
@@ -103,29 +121,31 @@
     "\n",
     ":::\n",
     "\n",
-    "Try to convince yourself why the [Euclidean distance](#euclidean_distance_defn) fits this definition. What constitutes close or far is typically application dependent.\n",
+    "Try to convince yourself why the [Euclidean distance](#euclidean_distance_defn) fits this definition. \n",
     "\n",
-    "When the distance $\\| \\vv x - \\vv y \\|$ between two vectors $\\vv x, \\vv y \\in V$ is small, we say they are \"close.\" If the distance between $\\| \\vv x - \\vv y \\|$ is large, we say they are \"far.\"\n",
+    "When the distance $\\| \\vv x - \\vv y \\|$ between two vectors $\\vv x, \\vv y \\in V$ is small, we say they are \"close.\" If the distance between $\\| \\vv x - \\vv y \\|$ is large, we say they are \"far.\" What constitutes close or far is typically application dependent.\n",
     "\n",
     "Note that one vector space can admit many distance functions. From here on, unless otherwise mentioned, we will only be considering the [Euclidean distance](#euclidean_distance_defn).\n",
     "\n",
+    ":::{prf:example} Matrix norms and their induced distances\n",
+    ":label:distance-feature_distance\n",
     "\n",
-    "````{exercise}  Euclidean distance\n",
-    ":label: distance-ex1\n",
+    "In this example, we will introduce a class of norms over $\\mathbb{R}^n$, as well as their associated distance functions.\n",
     "\n",
-    "Find the Euclidean distance between $\\bm 1\\\\ 2 \\em$ and $\\bm 3 \\\\ 4 \\em$.\n",
+    "If $\\vv x, \\vv y \\in V$ are vectors containing *features* of two objects, $\\|\\vv  x - \\vv  y\\|$ is called the *feature distance*. It gives a measure of how \"different\" two objects are. \n",
     "\n",
-    "```{solution} distance-ex1\n",
-    ":class: dropdown\n",
+    "For example, suppose each vector represents a patient in a hospital with entries such as age, weight, height, and test results. We can use $\\| \\vv x - \\vv y\\|$ to check if patients $\\vv x$ and $\\vv y$ are \"close\" to each other with respect to these features.\n",
+    ":::\n",
     "\n",
-    "We have\n",
+    ":::{prf:example} Matrix norms and their induced distances\n",
+    ":label:distance-feature_distance\n",
     "\n",
-    "\\begin{align*}\n",
-    "    \\text{dist}\\left(\\bm 1\\\\ 2 \\em, \\bm 3\\\\ 4 \\em\\right) = \\left\\| \\bm 1\\\\ 2 \\em - \\bm 3\\\\ 4 \\em \\right\\| = \\sqrt{ (1 - 3)^2 + (2 - 4)^2} =\\boxed{2\\sqrt 2}\n",
-    "\\end{align*}\n",
+    "If $\\vv x, \\vv y \\in V$ are vectors containing *features* of two objects, $\\|\\vv  x - \\vv  y\\|$ is called the *feature distance*. It gives a measure of how \"different\" two objects are. \n",
     "\n",
-    "```\n",
-    "````\n",
+    "For example, suppose each vector represents a patient in a hospital with entries such as age, weight, height, and test results. We can use $\\| \\vv x - \\vv y\\|$ to check if patients $\\vv x$ and $\\vv y$ are \"close\" to each other with respect to these features.\n",
+    ":::\n",
+    "\n",
+    "# Applications of Distances\n",
     "\n",
     ":::{prf:example} Feature distances\n",
     ":label:distance-feature_distance\n",
@@ -133,7 +153,6 @@
     "If $\\vv x, \\vv y \\in V$ are vectors containing *features* of two objects, $\\|\\vv  x - \\vv  y\\|$ is called the *feature distance*. It gives a measure of how \"different\" two objects are. \n",
     "\n",
     "For example, suppose each vector represents a patient in a hospital with entries such as age, weight, height, and test results. We can use $\\| \\vv x - \\vv y\\|$ to check if patients $\\vv x$ and $\\vv y$ are \"close\" to each other with respect to these features.\n",
-    "\n",
     ":::\n",
     "\n",
     ":::{prf:example} Nearest neighbors\n",
