graph distances example

--- a/02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
+++ b/02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
@@ -128,22 +128,56 @@
     "Note that one vector space can admit many distance functions. From here on, unless otherwise mentioned, we will only be considering the [Euclidean distance](#euclidean_distance_defn).\n",
     "\n",
     ":::{prf:example} Matrix norms and their induced distances\n",
-    ":label:distance-feature_distance\n",
+    ":label:distance-matrix_norm_ex\n",
     "\n",
-    "In this example, we will introduce a class of norms over $\\mathbb{R}^n$, as well as their associated distance functions.\n",
+    "TODO \n",
     "\n",
-    "If $\\vv x, \\vv y \\in V$ are vectors containing *features* of two objects, $\\|\\vv  x - \\vv  y\\|$ is called the *feature distance*. It gives a measure of how \"different\" two objects are. \n",
-    "\n",
-    "For example, suppose each vector represents a patient in a hospital with entries such as age, weight, height, and test results. We can use $\\| \\vv x - \\vv y\\|$ to check if patients $\\vv x$ and $\\vv y$ are \"close\" to each other with respect to these features.\n",
     ":::\n",
     "\n",
-    ":::{prf:example} Matrix norms and their induced distances\n",
-    ":label:distance-feature_distance\n",
+    ":::{prf:example} Distances on a connected graph\n",
+    ":label:distance-connected_graph_ex\n",
     "\n",
-    "If $\\vv x, \\vv y \\in V$ are vectors containing *features* of two objects, $\\|\\vv  x - \\vv  y\\|$ is called the *feature distance*. It gives a measure of how \"different\" two objects are. \n",
+    "In this example, we'll demonstrate how the [definition of a distance function](#general_distance_defn) can be satisfied when the underlying space isn't a vector space. We will consider the *shortest walk distance on a connected undirected graph*.\n",
     "\n",
-    "For example, suppose each vector represents a patient in a hospital with entries such as age, weight, height, and test results. We can use $\\| \\vv x - \\vv y\\|$ to check if patients $\\vv x$ and $\\vv y$ are \"close\" to each other with respect to these features.\n",
+    "An undirected graph consists of a set of *vertices* and *edges* which connect 2 vertices. Often times, undirected graphs are drawn as follows: the vertices are dots, and edges are lines connecting 2 dots. So we can represent an example of an undirected graph with the image below. (For our purposes, we will assume that each pair of vertices can have at most 1 edge connecting them, and that no vertex has an edge to itself.)\n",
+    "\n",
+    "\n",
+    "\n",
+    "![alt text](../figures/04-graph_distance.png)\n",
+    "\n",
+    "A *walk* in an undirected graph is a sequence of vertices $v_1, v_2, ..., v_{k - 1}, v_k$ such that there is an edge between adjacent vertices in this sequence. The number of edges in the walk is its *length*. In the image, for example, $3 \\to 5\\to 6\\to 10$ is a walk with length 3.\n",
+    "\n",
+    "We say an undirected graph is *connected* if there is at least one walk between every pair of vertices. The above graph is connected.\n",
+    "\n",
+    "If a graph is connected, then we can define the *shortest walk distance* as follows. For vertices $u, v$ in our graph, their shortest walk distance is defined as \n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\text{dist}(u, v) = \\text{length of shortest walk starting at $u$ and ending at $v$}\n",
+    "\\end{align*}\n",
+    "\n",
+    "We will verify that the shortest walk distance indeed satisfies the three axioms of a distance function.\n",
+    "\n",
+    "1. **Symmetry.** For any two vertices $u, v$, let $P = u \\to ... \\to v$ be a minimum length walk (with length $l$) starting at $u$ and ending at $v$. If we reverse $P$, we get a walk starting at $v$ and ending at $u$ with length $l$. This means that $d(v, u) \\leq l = d(u, v)$.\n",
+    "\n",
+    "    Next, let $Q = v\\to ...\\to u$ be a minimum length walk starting at $v$ and ending at $u$ (with length $l'$). If we reverse $Q$, we get a walk starting at $u$ and ending at $v$ with length $l'$. This means that $d(u, v) \\leq l' = d(v, u)$.\n",
+    "\n",
+    "    Taken together, these two inequalities imply that $d(u, v) = d(v, u)$, i.e., the shortest walk distance is symmetric.\n",
+    "\n",
+    "2. **Positivity.** For vertices $u \\neq v$, it will take at least one edge to go from $u$ to $v$, implying that $d(u, v) > 0$ if $u \\neq v$. Also, $d(v, v) = 0$ because we can take the trivial walk $P = v$, which has no edges. \n",
+    "\n",
+    "3. **Triangular Inequality.** For vertices $u, v, w$, we want to show that \n",
+    "\n",
+    "    \\begin{align*}\n",
+    "    d(u, w) \\leq d(u, v) + d(v, w)\n",
+    "    \\end{align*}\n",
+    "\n",
+    "    Note that if $P_{uv}$ is a walk of length $d(u, v)$ from $u$ to $v$, and $P_{vw}$ is a walk of length $d(v, w)$ from $v$ to $w$, then we can concatenate $P_{uv} \\to P_{vw}$ to get a walk starting from $u$ which ends at $w$ and has length $d(u, v) + d(v, w)$. Since the shortest walk from $u$ to $w$ can't be longer than this walk we just constructed, this implies that $d(u, w) \\leq d(u, v) + d(v, w)$, i.e., the triangular inequality holds.\n",
+    "\n",
+    "\n",
     ":::\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# Applications of Distances\n",
     "\n",
