matrix norms example

--- a/02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
+++ b/02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
@@ -130,7 +130,15 @@
     ":::{prf:example} Matrix norms and their induced distances\n",
     ":label:distance-matrix_norm_ex\n",
     "\n",
-    "TODO \n",
+    "Let $M \\in \\mathbb{R}^{n \\times n}$ be a symmetric square matrix such that $x^T M x > 0$ for all nonzero $x\\in \\mathbb{R}^n$. Such a matrix is called *positive definite*; some equivalent definitions of positive definite matrices are symmetric matrices which may be decomposed as $A^TA$, where $A$ is an invertible square matrix, or symmetric matrices with all *strictly positive* eigenvalues. A familiar positive definite matrix is the identity matrix, $I_n$.\n",
+    "\n",
+    "Then, $M$ induces an [inner product](#inner_defn) given by $\\langle \\vv u, \\vv v \\rangle_M = \\vv u^T M \\vv v$. In the case that $M$ is diagonal, this is the [weighted dot product](#weighted-dot-product-ex) we have seen before. Try for yourselves to verify that $\\langle \\vv u, \\vv v \\rangle_M$ indeed satisfies all axioms of an inner product.\n",
+    "\n",
+    "The inner product in turn induces a norm $\\|\\vv v\\|_M = \\sqrt{\\langle \\vv v, \\vv v\\rangle}_M = \\sqrt{\\vv v^T M \\vv v}$.\n",
+    "\n",
+    "TODO: Probably want to move this to the norms lesson \n",
+    "\n",
+    "\n",
     "\n",
     ":::\n",
     "\n",
