modified:   02_Inner_Products_and_Norms/042-angle.ipynb 	modified:   02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb 	modified:   02_Inner_Products_and_Norms/045-orthogonal_orthonormal_bases.ipynb

--- a/02_Inner_Products_and_Norms/042-angle.ipynb
+++ b/02_Inner_Products_and_Norms/042-angle.ipynb
@@ -105,23 +105,43 @@
     "\\label{angle_bounds}\n",
     "-1 \\leq \\frac{\\langle \\vv v, \\vv w \\rangle}{\\|\\vv v\\|. \\|\\vv w\\|} \\leq 1.\n",
     "\\end{equation}\n",
-    "Hence, $\\theta$ is well defined, and unique if restricted to be in $[0, \\pi]$. \n",
-    "\n",
-    ":::{prf:example} \n",
-    ":label:dot_eg\n",
-    "The vectors $\\vv v = \\bm 1 \\\\ 1 \\\\ 0\\em$ and $\\vv w = \\bm 2 \\\\ 1 \\\\ 1\\em$ have dot product $\\vv v . \\vv w = 3$ and norms $\\|\\vv v\\| = \\sqrt{2}, \\|\\vv w\\| = \\sqrt{6}$. Hence,\n",
-    "$$\n",
-    "\\cos(\\theta) = \\frac{3}{\\sqrt{2}\\sqrt{6}} = \\frac{\\sqrt{3}}{2} \\Rightarrow \\theta = \\arccos\\left(\\frac{\\sqrt{3}}{2}\\right) = \\frac{\\pi}{6},\n",
-    "$$\n",
-    "which is the usual notion of angle.\n",
-    ":::"
+    "Hence, $\\theta$ is well defined, and unique if restricted to be in $[0, \\pi]$. "
    ]
   },
   {
    "cell_type": "markdown",
    "id": "40399492",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Angles between generic vectors\n",
+    "\n",
+    ":::{prf:example} \n",
+    ":label:dot_eg\n",
+    "The vectors $\\vv v = \\bm 1 \\\\ 1 \\\\ 0\\em$ and $\\vv w = \\bm 2 \\\\ 1 \\\\ 1\\em$ have dot product $\\vv v . \\vv w = 3$ and norms $\\|\\vv v\\| = \\sqrt{2}, \\|\\vv w\\| = \\sqrt{6}$. Hence,\n",
+    "$$\n",
+    "\\cos(\\theta) = \\frac{3}{\\sqrt{2}\\sqrt{6}} = \\frac{\\sqrt{3}}{2} \\Rightarrow \\theta = \\arccos\\left(\\frac{\\sqrt{3}}{2}\\right) = \\frac{\\pi}{6}  \\ \\textrm{rad},\n",
+    "$$\n",
+    "which is the usual notion of angle. \n",
+    "\n",
+    "We can also compute the _angle_ between $\\vv v$ and $\\vv w$ with respect to the weighted inner product $\\langle \\vv v, \\vv w \\rangle = 2v_1w_1 + 3v_3w_3$. For this inner product, $\\langle \\vv v, \\vv w \\rangle = 4, \\| \\vv v\\| = \\sqrt{2}, \\|\\vv w\\| = \\sqrt{11}$. Hence,\n",
+    "$$\n",
+    "\\cos(\\theta) = \\frac{4}{\\sqrt{2}\\sqrt{11}} = 0.8528 \\Rightarrow \\theta = \\arccos\\left(0.8528\\right) = 0.5495 \\ \\textrm{rad}.\n",
+    "$$\n",
+    ":::\n",
+    "\n",
+    ":::{prf:example} \n",
+    ":label:poly_eg\n",
+    "We can also define angles between vectors in a generic vector space, for example, polynomials. For ${p(x) = a_0 + a_1 x +a_2x^2, q(x) = b_0 + b_1x + b_2x^2 \\in P^{(2)}}$, we define the $\\langle p, q\\rangle = a_0b_0 + a_1b_1 + a_2b_2$. This agrees with the standard [dot product](./041-inner.ipynb#dot-product-defn) applied to $\\vv p = \\bm a_0 \\\\ a_1 \\\\ a_2\\em, \\vv q = \\bm b_0 \\\\ b_1 \\\\ b_2\\em$ and hence immediately satisfies [this definition](./041-inner.ipynb#inner_defn).  The angle between $p(x)$ and $q(x)$ is computed as\n",
+    "$$\n",
+    "\\cos(\\theta) = \\frac{\\langle p, q \\rangle}{\\|p\\|. \\|q\\|} = \\frac{\\langle \\vv p, \\vv q \\rangle}{\\|\\vv p\\|. \\|\\vv q\\|}.\n",
+    "$$\n",
+    "For example, if $p(x)  = 1 + x$ and $q(x) = -1 + x^2$, then $\\langle p, q \\rangle = -1$ and $\\| p \\| = \\sqrt{2}, \\| q \\| = \\sqrt{2}$, and ${\\cos(\\theta) = \\frac{-1}{2} \\Rightarrow \\theta = \\frac{2\\pi}{3}}$.\n",
+    ":::\n",
+    "\n",
+    "```{note}\n",
+    "The expression ([angle](#angle_defn)) is called the _cosine similarity_ of two vectors and measures how \"aligned\" they are. Cosine similarity plays an important role in modern chatbots like ChatGPT, which will be discussed in the case study.\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
