--- a/02_Inner_Products_and_Norms/045-orthogonal_orthonormal_bases.ipynb
+++ b/02_Inner_Products_and_Norms/045-orthogonal_orthonormal_bases.ipynb
@@ -183,7 +183,7 @@
     "    \\quad \\vv{v_3} = \\frac{1}{\\sqrt{30}}\\bm 5\\\\-2\\\\1\\em\n",
     "\\end{align*}\n",
     "\n",
-    "```{solution} span_lin_ind-ex7\n",
+    "```{solution} coordinates-orthonormal-ex\n",
     ":class: dropdown\n",
     "\n",
     "As we [showed earlier](#coordinates-norm-orthonormal-thm), all we need to do is compute dot products!\n",
@@ -290,13 +290,34 @@
     "\n",
     ":::"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
