modified:   02_Inner_Products_and_Norms/042-angle.ipynb 	new file:   figures/04-orth.jpg

--- a/02_Inner_Products_and_Norms/042-angle.ipynb
+++ b/02_Inner_Products_and_Norms/042-angle.ipynb
@@ -51,7 +51,8 @@
     "\n",
     "By the end of this page, you should know:\n",
     "- what is the Cauchy-Schwarz Inequality\n",
-    "- what is the generalized angle between vectors"
+    "- what is the generalized angle between vectors\n",
+    "- Orthogonality"
    ]
   },
   {
@@ -142,6 +143,42 @@
     "The expression ([angle](#angle_defn)) is called the _cosine similarity_ of two vectors and measures how \"aligned\" they are. Cosine similarity plays an important role in modern chatbots like ChatGPT, which will be discussed in the case study.\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ced998c1-86cd-4be4-9c06-0f95a2dd9933",
+   "metadata": {},
+   "source": [
+    "## Orthogonal vectors\n",
+    "\n",
+    "Continuing our strategy of extending familiar geometric concepts in Eucledian spaces to general inner product spaces, we focus on the notion of _perpendicular vectors_. Such vectors meet at a right angle, that is, $\\theta = \\frac{\\pi}{2}$ or $\\theta = -\\frac{\\pi}{2}$ with $\\cos(\\theta) = 0$. Note that in such a case $\\vv v \\cdot \\vv w = 0$ (refer to [Cauchy-Schwarz](#cauchy_schwarz))\n",
+    "\n",
+    ":::{prf:definition} Orthogonal\n",
+    ":label: orth_defn\n",
+    "Two elements $\\vv v, \\vv w \\in V$ of an inner product space are _orthogonal_ with respect to $\\langle \\cdot, \\cdot\\rangle$ if $\\langle \\vv v, \\vv w \\rangle = 0$.\n",
+    ":::\n",
+    "\n",
+    ":::{prf:example} \n",
+    ":label:orth_eg\n",
+    "The vectors $\\vv v = \\bm -3 2\\em$ and $\\vv w = \\bm -4 -6\\em$ are orthogonal with respect to the dot product $\\vv v \\cdot \\vv w = -3 \\cdot -4 + 2 \\cdot -6 = 0$. We can see below that they meet at a right angle.\n",
+    ":::{figure}../figures/04-orth.jpg\n",
+    ":label:Orth\n",
+    ":alt: Orthogonal\n",
+    ":width: 200px\n",
+    ":align: center\n",
+    ":::\n",
+    "\n",
+    "However, $$\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9724090-dfd8-4cef-b972-d6af079b3892",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
