small formatting changes

--- a/02_Inner_Products_and_Norms/046-gram_schmidt.ipynb
+++ b/02_Inner_Products_and_Norms/046-gram_schmidt.ipynb
@@ -45,7 +45,22 @@
    "source": [
     "# The Gram-Schmidt Process\n",
     "\n",
-    "Hopefully we've convinced you that "
+    "Hopefully we've convinced you that orthogonal bases are useful, so now the natural question becomes: how do I compute one? That's where the famed Gram-Schmidt process (GSP) comes into play.\n",
+    "\n",
+    "The idea behind GSP is farily straightforward: given an initial basis for a vector space, iteratively modify until it is orthogonal. Let's start with a simple concrete example, and then introduce the general algorithm:\n",
+    "\n",
+    ":::{prf:example} Finding an orthogonal basis\n",
+    ":label: computing-orthogonal-basis-ex\n",
+    "\n",
+    "Let $W = \\text{span}\\{\\vv{x_1}, \\vv{x_2}\\}$, where $\\vv{x_1} = \\bm 3\\\\6\\\\0 \\em$ and $\\vv{x_2} = \\bm 1\\\\2\\\\2 \\em$.\n",
+    "\n",
+    "Since $\\vv{x_1}$ and $\\vv{x_2}$ are linearly independent (why?), they form a basis for the subspace $W \\subseteq \\mathbb{R}^3$, where $\\text{dim}(W) = 2$.\n",
+    "\n",
+    "However, $\\vv{x_1}$ and $\\vv{x_2}$ are not [orthogonal](#orthogonal-defn) because\n",
+    "\n",
+    "\n",
+    "\n",
+    ":::"
    ]
   }
  ],
