--- a/02_Inner_Products_and_Norms/042-angle.ipynb
+++ b/02_Inner_Products_and_Norms/042-angle.ipynb
@@ -51,8 +51,9 @@
     "\n",
     "By the end of this page, you should know:\n",
     "- what is the Cauchy-Schwarz Inequality\n",
-    "- what is the generalized angle between vectors\n",
-    "- Orthogonality"
+    "- the generalized angle between vectors\n",
+    "- what is orthogonality\n",
+    "- the triangle inequality"
    ]
   },
   {
@@ -160,22 +161,134 @@
     "\n",
     ":::{prf:example} \n",
     ":label:orth_eg\n",
-    "The vectors $\\vv v = \\bm -3 2\\em$ and $\\vv w = \\bm -4 -6\\em$ are orthogonal with respect to the dot product $\\vv v \\cdot \\vv w = -3 \\cdot -4 + 2 \\cdot -6 = 0$. We can see below that they meet at a right angle.\n",
-    ":::{figure}../figures/04-orth.jpg\n",
+    "The vectors $\\vv v = \\bm -3 \\\\ 2\\em$ and $\\vv w = \\bm -4 \\\\ -6\\em$ are orthogonal with respect to the dot product $\\vv v \\cdot \\vv w = -3 \\cdot -4 + 2 \\cdot -6 = 0$. We can see below that they meet at a right angle.\n",
+    "```{figure}../figures/04-orth.jpg\n",
     ":label:Orth\n",
     ":alt: Orthogonal\n",
     ":width: 200px\n",
     ":align: center\n",
+    "```\n",
     ":::\n",
     "\n",
-    "However, $$\n",
+    "```{warning}\n",
+    "$\\vv v$ and $\\vv w$ are _not orthogonal_ with respect to the weighted inner product $\\langle \\vv v, \\vv w \\rangle = 2v_1w_1 + 3v_2w_2$.\n",
+    "$$\n",
+    "\\langle \\vv v, \\vv w \\rangle = \\left\\langle \\bm -3 \\\\ 2\\em, \\bm -4 \\\\ -6\\em\\right\\rangle = 2(-3 \\cdot -4) + 3(2 \\cdot -6) = -12 \\neq 0. \n",
+    "$$\n",
+    "```\n",
+    "\n",
+    "```{note}\n",
+    "Orthogonality, like angles in general, depend on the inner product being used. \n",
+    "```\n",
+    "\n",
+    ":::{prf:example} \n",
+    ":label:orth_poly_eg\n",
+    "The polynomials $f(x) = -1 + x$ and $g(x) = 1 + x - x^2$ are orthogonal with respect to the inner product on $P^{(2)}$ defined previously as $\\langle p, q\\rangle = a_0b_0 + a_1b_1 + a_2b_2$. Here, $a_0 = -1, a_1 = 1, a_2 = 0$ and $b_0 = 1, b_1 = 1, b_2 = -1$. So, $\\langle f, g\\rangle = -1\\cdot 1 + 1 \\cdot 1 + 0 \\cdot -1 = 0$. \n",
+    "\n",
+    "However, $f$ and $g$ are not orthogonal with respect to the inner product $\\langle p, q \\rangle = \\int_0^1 p(x)q(x) dx$ defined on $C^{0}[0, 1]$:\n",
+    "$$\n",
+    "\\langle f, g \\rangle = \\int_0^1 (-1 + x)(1 + x - x^2) dx = \\int_0^1 (-1 + 2x^2 - x^3) dx = -1 + \\frac{2}{3} - \\frac{1}{4} = -\\frac{7}{12} \\neq 0.\n",
+    "$$\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39fa3c9b-803d-4661-9629-5634520de145",
+   "metadata": {},
+   "source": [
+    "## The Triangle Inequality\n",
+    "\n",
+    "From the law of cosines, we know that the length of one side of a triangle is at most the sum of the length of the other two sides. \n",
+    "\n",
+    "```{figure}../figures/04-triangle.jpg\n",
+    ":label:triangle\n",
+    ":alt: Triangle\n",
+    ":width: 150px\n",
+    ":align: center\n",
+    "```\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\label{cos_law}\n",
+    "\n",
+    "c^2 &= a^2 + b^2 - 2ab\\cos(\\theta) \\\\\n",
+    "&\\leq a^2 + b^2 + 2ab \\ (\\textrm{since} \\ \\cos(\\theta) \\leq 1) \\\\\n",
+    "&= (a+b)^2 \\\\\n",
+    "\\Rightarrow c &\\leq a+b\n",
+    "\\end{equation}\n",
+    "\n",
+    "The idea  in [](#cos_law) extends directly to generic vectors that relate $\\|\\vv v + \\vv w\\|$ to $\\|\\vv v\\|$ and $\\| \\vv w\\|$.\n",
+    "\n",
+    "```{prf:theorem} Triangle Inequality\n",
+    ":label:triangle_ineq\n",
+    "The norm associated with an inner product satisfies the _triangle inequality_:\n",
+    "\\begin{equation}\n",
+    "\\label{tri_ineq_eq}\n",
+    "\\|\\vv v + \\vv w\\| \\leq \\|\\vv v\\| + \\|\\vv w\\| \\ \\textrm{for all} \\ \\vv v, \\vv w \\in V.\n",
+    "\\end{equation}\n",
+    "Equality holds in [](#tri_ineq_eq) if and only if $\\vv v = c \\vv w $ for some positive constant $c > 0$. \n",
+    "\n",
+    ":::{prf:proof} Proof of [](#triangle_ineq)\n",
+    ":label: proof-triangle_ineq\n",
+    ":class: dropdown\n",
+    "\n",
+    "This is very similar to the law of cosines. We set up a triangle as given below and use that\n",
+    "$$\n",
+    "\\|\\vv v + \\vv w\\|^2 &= \\langle \\vv v + \\vv w, \\vv v + \\vv w\\rangle = \\|\\vv v\\|^2 + 2 \\langle \\vv v, \\vv w\\rangle + \\|\\vv w\\|^2 \\\\\n",
+    "&= \\|\\vv v\\|^2 + 2 \\|\\vv v\\| \\|\\vv w\\| \\cos(\\theta) + \\|\\vv w\\|^2 \\\\\n",
+    "&\\leq \\|\\vv v\\|^2 +2 \\|\\vv v\\| \\|\\vv w\\| + \\|\\vv w\\|^2 \\ (\\textrm{Cauchy-Schwartz}) \\\\\n",
+    "&= \\left(\\|\\vv v\\| + \\| \\vv w\\|\\right)^2\n",
+    "$$\n",
+    ":::{figure}../figures/04-triangle_thm.jpg\n",
+    ":label:triangle_thm\n",
+    ":alt: Triangle Theorem\n",
+    ":width: 200px\n",
+    ":align: center\n",
+    ":::\n",
+    "\n",
+    ":::\n",
+    "```\n",
+    "\n",
+    "\n",
+    ":::{prf:example} \n",
+    ":label:triangle_eg\n",
+    "\\begin{equation}\n",
+    "\\vv v= \\bm 2 \\\\ -1 \\\\ 3\\em, \\ \\vv w = \\bm 1 \\\\ 1 \\\\ -2\\em \\Rightarrow \\vv v + \\vv w = \\bm 3 \\\\ 0 \\\\ 1\\em \\\\\n",
+    "\\|\\vv v\\| = \\sqrt{14}, \\ \\|\\vv w\\| = \\sqrt{6}, \\ \\|\\vv v + \\vv w\\| = \\sqrt{5} \\\\\n",
+    "\\Rightarrow \\sqrt{5} = 2.236 = \\|\\vv v + \\vv w\\| \\leq \\|\\vv v\\| + \\|\\vv w\\| = \\sqrt{14} + \\sqrt{6} = 6.191\n",
+    "\\end{equation}\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "458c6b5f-949b-4ea8-a0c0-a7a42cf95ce5",
+   "metadata": {},
+   "source": [
+    "## Norms\n",
+    "\n",
+    "Although inner products allow us to define a notion of length, which we called a _norm_, there are other sensible ways of measuring the size of a vector depending upon the application which we will discuss now. \n",
+    "\n",
+    ":::{prf:example} \n",
+    ":label:manh_norm\n",
+    "Consider the vector $\\vv v = \\bm 1 \\\\ -2\\em$. It's Eucledian norm is $\\|\\vv v\\| = \\sqrt{5}$. Its taxi cab distance, which we call  $\\|\\vv v\\|_1$ is the distance driven by a cab driver in Manhattan where he can only drive east/west and north/south. \n",
+    "$$\n",
+    "\\|\\vv v\\|_1 = \\|1\\| + \\|-2\\| = 3.\n",
+    "$$\n",
+    "Note that the Eucledian norm and taxi cab distance are different! \n",
+    "```{figure}../figures/04-manhat.jpg\n",
+    ":label:manhattan\n",
+    ":alt:Manhattan\n",
+    ":width: 200px\n",
+    ":align: center\n",
+    "```\n",
     ":::"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9724090-dfd8-4cef-b972-d6af079b3892",
+   "id": "0963458e-a07e-4391-8687-a42a39d8e5c1",
    "metadata": {},
    "outputs": [],
    "source": []
