more work on gram-schmidt

--- a/02_Inner_Products_and_Norms/045-orthogonal_orthonormal_bases.ipynb
+++ b/02_Inner_Products_and_Norms/045-orthogonal_orthonormal_bases.ipynb
@@ -209,10 +209,10 @@
     "```\n",
     "````\n",
     "\n",
-    "A very small change to the above allows us to extend these ideaes to orthogonal, but not orthonormal, bases:\n",
+    "A very small change to the above allows us to extend these ideas to orthogonal, but not orthonormal, bases:\n",
     "\n",
-    ":::{prf:theorem} Coordinates and Norm in an Orthonormal Basis\n",
-    ":label:coordinates-norm-orthonormal-thm\n",
+    ":::{prf:theorem} Coordinates and Norm in an Orthogonal Basis\n",
+    ":label:coordinates-norm-orthogonal-thm\n",
     "\n",
     "If $\\vv{v_1}, ..., \\vv{v_n}$ are an orthogonal basis, then $\\vv v\\in V$ can be written\n",
     "\n",
