--- a/02_Inner_Products_and_Norms/046-gram_schmidt.ipynb
+++ b/02_Inner_Products_and_Norms/046-gram_schmidt.ipynb
@@ -58,9 +58,43 @@
     "\n",
     "However, $\\vv{x_1}$ and $\\vv{x_2}$ are not [orthogonal](#orthogonal-defn) because\n",
     "\n",
+    "\\begin{align*}\n",
+    "    \\langle \\vv{x_1}, \\vv{x_2}\\rangle = 3(1) + 6(2) + 0(2) = 15.\n",
+    "\\end{align*}\n",
     "\n",
+    "Let's use $\\{\\vv{v_1}, \\vv{v_2} \\}$ for our new basis, and set $\\vv{v_1} = \\vv{x_1}$. We need to find a vector $\\vv{v_2}$ that is orthogonal to $\\vv{v_1}$ such that $\\text{span}\\{\\vv{v_1}, \\vv{v_2}\\} = W$.\n",
     "\n",
-    ":::"
+    "Let's look at a picture first:\n",
+    "\n",
+    "![Parallel and perpendicular components of $\\vv{x_2}$ along $\\vv{v_1}$](../figures/04-gram_schmidt.png)\n",
+    "\n",
+    "From this picture, we observe that we can write $\\vv{x_2} = \\vv p  +\\vv{v_2}$ where $\\vv{p}$ is the component of $\\vv{x_2}$ parallel with $\\vv{x_1}$ and $\\vv{v_2}$ is what's left over, i.e., the part of $\\vv{x_2}$ that is orthogonal to $\\vv{x_1} = \\vv{v_1}$.\n",
+    "\n",
+    "If $\\vv p$ is parallel with $\\vv{v_1}$, then we must have that $\\vv{p} = c\\vv{v_1}$ for some constant $c$, and therefore $\\vv{2} = \\vv{x_2} - \\vv p = \\vv{x_2} - c\\vv{v_1}$.\n",
+    "\n",
+    "Now from our [previous discussion](#coordinates-norm-orthogonal-thm), we know that $c = \\frac{\\langle \\vv{x_2}, \\vv{v_1}\\rangle}{\\|\\vv{v_1}\\|^2}$ (why?) but let's see a different way of computing $c$. We want $\\langle \\vv{v_2}, \\vv{v_1} \\rangle = 0$, so we must have:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\langle \\vv{v_2}, \\vv{v_1} \\rangle = \\langle \\vv{x_2} - c\\vv{v_1}, \\vv{v_1}\\rangle = \\langle \\vv{x_2}, \\vv{v_1} \\rangle - c\\|\\vv{v_1}\\|^2 = 0\n",
+    "\\end{align*}\n",
+    "\n",
+    "or equivalently, $c = \\frac{\\langle \\vv{x_2}, \\vv{v_1}\\rangle}{\\|\\vv{v_1}\\|^2}$. Therefore, $\\vv{v_2} = \\vv{x_2} - \\frac{\\langle \\vv{x_2}, \\vv{v_1} \\rangle}{\\|\\vv{v_1}\\|^2} \\vv{v_1}$.\n",
+    "\n",
+    "By construction, we have that $\\langle \\vv{v_1}, \\vv{v_2}\\rangle = 0$, and since $\\vv{v_1} = \\vv{x_1}$ and $\\vv{v_2} = \\vv{x_2} - c\\vv{x_1}$, both $\\vv{v_1}, \\vv{v_2} \\in W$. So $\\vv{v_1}$ and $\\vv{v_2}$ are linearly independent and contained in $W$ (a subspace of dimension $2$), so form a basis for $W$. \n",
+    "\n",
+    "After actually plugging in our values of $\\vv{x_1}$ and $\\vv{x_2}$, you can verify that \n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\vv{v_1} = \\bm 3\\\\6\\\\0 \\em, \\quad \\vv{v_2} = \\bm 0\\\\0\\\\2 \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "is an orthogonal basis for $\\text{span}\\left\\{\\bm 3\\\\6\\\\0 \\em, \\bm 1\\\\2\\\\2 \\em\\right\\}$.\n",
+    "\n",
+    ":::\n",
+    "\n",
+    "The Gram-Schmidt process simply repeats [this process](#computing-orthogonal-basis-ex) over and over if there are more than two vectors, but the idea remains the same: at each step you subtract off the directions of the current vector that are parallel with previous ones.\n",
+    "\n",
+    "TOOD: PSEUDO CODE, EXAMPLE/EXERCISE, NOTES"
    ]
   }
  ],
