gram-schmidt pseudocode

--- a/02_Inner_Products_and_Norms/046-gram_schmidt.ipynb
+++ b/02_Inner_Products_and_Norms/046-gram_schmidt.ipynb
@@ -94,7 +94,29 @@
     "\n",
     "The Gram-Schmidt process simply repeats [this process](#computing-orthogonal-basis-ex) over and over if there are more than two vectors, but the idea remains the same: at each step you subtract off the directions of the current vector that are parallel with previous ones.\n",
     "\n",
-    "TOOD: PSEUDO CODE, EXAMPLE/EXERCISE, NOTES"
+    ":::{prf:algorithm} The Gram-Schmidt Process\n",
+    ":label: gram-schmidt-alg\n",
+    "\n",
+    "Given a basis $\\{\\vv{x_1}, ..., \\vv{x_p}\\}$ for a nonzero subspace $W$ of $\\mathbb{R}^n$, define\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\vv{v_1} &= \\vv{x_1}\\\\\n",
+    "    \\vv{v_2} &= \\vv{x_2} - \\frac{\\langle \\vv{x_2}, \\vv{v_1} \\rangle}{\\langle \\vv{v_1}, \\vv{v_1}\\rangle} \\vv{v_1}\\\\\n",
+    "    \\vv{v_3} &= \\vv{x_3} - \\frac{\\langle \\vv{x_3}, \\vv{v_1} \\rangle}{\\langle \\vv{v_1}, \\vv{v_1}\\rangle} \\vv{v_1} - \\frac{\\langle \\vv{x_3}, \\vv{v_2} \\rangle}{\\langle \\vv{v_2}, \\vv{v_2}\\rangle} \\vv{v_2}\\\\\n",
+    "    \\vdots\\\\\n",
+    "    \\vv{v_p} &= \\vv{x_p} - \\frac{\\langle \\vv{x_p}, \\vv{v_1} \\rangle}{\\langle \\vv{v_1}, \\vv{v_1}\\rangle} \\vv{v_1} - \\frac{\\langle \\vv{x_p}, \\vv{v_2} \\rangle}{\\langle \\vv{v_2}, \\vv{v_2}\\rangle} \\vv{v_2} - ... - \\frac{\\langle \\vv{x_p}, \\vv{v_{p-1}} \\rangle}{\\langle \\vv{v_{p-1}}, \\vv{v_{p-1}}\\rangle} \\vv{v_{p-1}}\n",
+    "\\end{align*}\n",
+    "\n",
+    "Then $\\{ \\vv{v_1}, ..., \\vv{v_p} \\}$ is an orthogonal basis for $W$. In addition\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\text{span} \\left\\{ \\vv{v_1}, ..., \\vv{v_k} \\right\\} = \\text{span} \\left\\{ \\vv{x_1}, ..., \\vv{x_k} \\right\\} \\quad\\text{for $1 \\leq k \\leq p$}.\n",
+    "\\end{align*}\n",
+    "\n",
+    ":::\n",
+    "\n",
+    "TOOD: EXAMPLE/EXERCISE, NOTES\n",
+    "\n"
    ]
   }
  ],
