modified:   02_Inner_Products_and_Norms/042-angle.ipynb 	modified:   02_Inner_Products_and_Norms/046-gram_schmidt.ipynb

--- a/02_Inner_Products_and_Norms/042-angle.ipynb
+++ b/02_Inner_Products_and_Norms/042-angle.ipynb
@@ -155,7 +155,7 @@
     "Continuing our strategy of extending familiar geometric concepts in Eucledian spaces to general inner product spaces, we focus on the notion of _perpendicular vectors_. Such vectors meet at a right angle, that is, $\\theta = \\frac{\\pi}{2}$ or $\\theta = -\\frac{\\pi}{2}$ with $\\cos(\\theta) = 0$. Note that in such a case $\\vv v \\cdot \\vv w = 0$ (refer to [Cauchy-Schwarz](#cauchy_schwarz))\n",
     "\n",
     ":::{prf:definition} Orthogonal\n",
-    ":label: orth_defn\n",
+    ":label: orthogonal-defn\n",
     "Two elements $\\vv v, \\vv w \\in V$ of an inner product space are _orthogonal_ with respect to $\\langle \\cdot, \\cdot\\rangle$ if $\\langle \\vv v, \\vv w \\rangle = 0$.\n",
     ":::\n",
     "\n",
