finished gram schmidt notes

--- a/02_Inner_Products_and_Norms/046-gram_schmidt.ipynb
+++ b/02_Inner_Products_and_Norms/046-gram_schmidt.ipynb
@@ -115,8 +115,73 @@
     "\n",
     ":::\n",
     "\n",
-    "TOOD: EXAMPLE/EXERCISE, NOTES\n",
-    "\n"
+    "````{exercise}  Finding an orthonormal basis for a subspace of $\\mathbb{R}^4$\n",
+    ":label: gram_schmidt-ex1\n",
+    "\n",
+    "Find an orthonormal basis, with respect to the standard [dot product](#dot-product-defn), for the subspace $W\\subseteq \\mathbb{R}^n$ consisting all vectors that are [orthogonal](#orthogonal-defn) to the vector $\\vv a = (1, 2, -1, -3)$. \n",
+    "\n",
+    ":::{hint} Click me for a hint!\n",
+    ":class: dropdown\n",
+    "First, try to find any basis for $W$! You can do this by solving the homogenous system of equations\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\bm 1&2&-1&-3 \\em \\bm x_1\\\\x_2\\\\x_3\\\\x_4 \\em = 0\n",
+    "\\end{align*}\n",
+    ":::\n",
+    "\n",
+    "```{solution} gram_schmidt-ex1\n",
+    ":class: dropdown\n",
+    "\n",
+    "The first task is th find a basis for $W$. A vector $\\vv x = (x_1, x_2, x_3, x_4)$ is orthogonal to $\\vv a$ if and only if\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\vv x \\cdot \\vv a = x_1 + 2x_2 - x_3 - 3x_4 = 0\n",
+    "\\end{align*}\n",
+    "\n",
+    "Solving this in the usual way (i.e., writing $x_1$ in terms of $x_2$, $x_3$, $x_4$), we observe that the free variables are $x_2, x_3, x_4$, so that a (non-orthogonal) basis for the subspace is\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\vv{w_1} = \\bm -2\\\\1\\\\0\\\\0\\em, \\quad \\vv{w_2} = \\bm 1\\\\0\\\\1\\\\0\\em, \\quad\\vv{w_3} = \\bm 3\\\\0\\\\0\\\\1\\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "because \n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\bm x_1 \\\\x_2\\\\x_3\\\\x_4\\em = x_2 \\bm -2\\\\1\\\\0\\\\0\\em + x_3\\bm 1\\\\0\\\\1\\\\0\\em + x_4\\bm 3\\\\0\\\\0\\\\1 \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "Now we apply Gram-Schmidt to obtain an orthogonal basis: first we set $\\vv{v_1} = \\vv{w_1}$. To get $\\vv{v_2}$, we compute:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\vv{v_2}  = \\vv{w_2} - \\frac{\\langle \\vv{w_2}, \\vv{v_1}\\rangle}{\\langle \\vv{v_1}, \\vv{v_1}\\rangle} \\vv{v_1} = \\bm 1\\\\0\\\\1\\\\0 \\em - \\frac{-2}{5}\\bm -2\\\\1\\\\0\\\\0 \\em = \\bm 1/5 \\\\ 2/5 \\\\ 1 \\\\ 0\\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "Finally, we compute $\\vv{v_3}$:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\vv{v_3} &= \\vv{w_3} - \\frac{\\langle \\vv{w_3} ,\\vv{v_1}\\rangle}{\\langle \\vv{v_1}, \\vv{v_1}\\rangle}\\vv{v_1} - \\frac{\\langle \\vv{w_3}, \\vv{v_2}\\rangle}{\\langle \\vv{v_2}, \\vv{v_2}\\rangle}\\vv{v_2} \\\\\n",
+    "    &= \\bm 3\\\\0\\\\0\\\\1\\em - \\frac{-6}{5}\\bm -2\\\\1\\\\0\\\\0 \\em - \\frac{3/5}{6/5} \\bm 1/5\\\\2/5\\\\1\\\\0 \\em\\\\\n",
+    "    &= \\bm 1/2\\\\1\\\\-1/2\\\\1 \\em \n",
+    "\\end{align*}\n",
+    "\n",
+    "To get our hands on an orthonormal basis, we simply normalize the $\\vv{v_i}$ by dividing them by their norms. An orthonormal basis is given by $\\vv{u_1}, \\vv{u_2}, \\vv{u_3}$, where\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\vv{u_1} = \\frac{\\vv{v_1}}{\\|\\vv{v_1}\\|} = \\boxed{\\frac{1}{\\sqrt 5} \\bm -2\\\\1\\\\0\\\\0\\em}\\\\\n",
+    "    \\vv{u_2} = \\frac{\\vv{v_2}}{\\|\\vv{v_2}\\|} = \\boxed{\\frac{1}{\\sqrt{6/5}} \\bm 1/5 \\\\ 2/5 \\\\ 1 \\\\ 0\\em }\\\\\n",
+    "    \\vv{u_3} = \\frac{\\vv{v_3}}{\\|\\vv{v_3}\\|} = \\boxed{\\frac{1}{\\sqrt{5/2}} \\bm 1/2\\\\1\\\\-1/2\\\\1\\em }\n",
+    "\\end{align*}\n",
+    "\n",
+    "```\n",
+    "````\n",
+    "\n",
+    ":::{important}\n",
+    "The orthogonal basis you obtain from the GSP does depend on the order of the vectors in the original basis; different orderings will produce different bases, but they will all span the same space as the original basis.\n",
+    ":::\n",
+    "\n",
+    ":::{important}\n",
+    "We know that every vector space has a basis. The GSP tells us something very important: given any basis for a finite dimensional [inner product space](#inner-product-space-defn) space, we can always \"orthogonalize\" it. That is, every finite dimensional inner product space has an orthonormal basis!\n",
+    ":::\n"
    ]
   }
  ],
