modified:   02_Inner_Products_and_Norms/042-angle.ipynb

--- a/02_Inner_Products_and_Norms/042-angle.ipynb
+++ b/02_Inner_Products_and_Norms/042-angle.ipynb
@@ -53,7 +53,8 @@
     "- what is the Cauchy-Schwarz Inequality\n",
     "- the generalized angle between vectors\n",
     "- what is orthogonality\n",
-    "- the triangle inequality"
+    "- the triangle inequality\n",
+    "- what are norms "
    ]
   },
   {
@@ -280,20 +281,50 @@
     "```{figure}../figures/04-manhat.jpg\n",
     ":label:manhattan\n",
     ":alt:Manhattan\n",
-    ":width: 200px\n",
+    ":width: 300px\n",
     ":align: center\n",
     "```\n",
+    ":::\n",
     "\n",
-    ":::"
+    "We define a general norm on a vector space that does not directly rely on inner products but the norm acts as a measure of distance.  \n",
+    "\n",
+    ":::{prf:definition} Norm\n",
+    ":label: norm-defn\n",
+    "A norm on a vector space $V$ assigns a non-negative real number $\\|\\vv v\\|$ to each vector $\\vv v \\in V$, subject to the following axioms, valid for every $\\vv v, \\vv w \\in V$ and $c \\in \\mathbb{R}$:\n",
+    "1. _Positivity_: $\\|\\vv v\\| \\geq 0,$ with $\\|\\vv v\\| = 0$ if and only if $\\vv v = \\vv 0$.\n",
+    "2. _Homogeneity_: $\\|c \\vv v\\| = |c| \\|\\vv v\\|$.\n",
+    "3. _Triangle inequality_: $\\|\\vv v + \\vv w\\| \\leq \\|\\vv v\\| + \\|\\vv w\\|$.\n",
+    ":::\n",
+    "\n",
+    "### Describing [](#norm-defn)\n",
+    "\n",
+    "Axiom 1. says that length should always be non-negative and only the zero vector has zero length.\n",
+    "\n",
+    "Axiom 2. says if I stretch/shrink a vector by some factor, then the length should scale accordingly. If $c < 0$, then the vector flips direction but will not affect length.\n",
+    "\n",
+    "Axiom 3. tells us that lengths of sums of vectors should behave as if it satisfies the cosine rule. \n",
+    "\n",
+    "```{note} Common norms\n",
+    "1. The _1-norm_ of a vector $\\vv v = \\bm v_1 \\\\ v_2 \\\\ \\vdots \\\\ v_n\\em \\in \\mathbb{R}^n$ is the sum of the absolute values of its entries:\n",
+    "$$\n",
+    "\\|\\vv v\\|_1 = |v_1| + |v_2| + \\ldots + |v_n|\n",
+    "$$\n",
+    "which we recognize as the [taxi cab distance](#manh_norm). \n",
+    "\n",
+    "2. The $\\infty-$_norm_ or _max-norm_ is given by the maximal entry in absolute value:\n",
+    "$$\n",
+    "\\|\\vv v\\|_{\\infty} = \\max\\{|v_1|, |v_2|, \\ldots, |v_n|\\}.\n",
+    "$$\n",
+    "\n",
+    "The _1-norm_, $\\infty-$_norm_ and Eucledian norm (also called the _2-norm_) are examples of the general $p-$_norm_:\n",
+    "$$\n",
+    "\\|\\vv v\\|_p = \\left(\\sum_{i=1}^n|v_i|^p\\right)^{\\frac{1}{p}} \\ (\\textrm{p-norm})\n",
+    "$$\n",
+    "which can be shown to be a valid norm for $1 \\leq p < \\infty$, with the $\\infty-$_norm_ being a limiting case as $p \\to \\infty$.\n",
+    "\n",
+    "The hard part in showing $p-$_norm_ is a norm is verifying the triangle inequality ([axiom 3](#norm-defn)), which is also known as _Minkowski's inequality_.\n",
+    "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0963458e-a07e-4391-8687-a42a39d8e5c1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
