modified:   03_Orthogonality/051-orthogonal_orthonormal_bases.ipynb 	modified:   03_Orthogonality/052-gram_schmidt.ipynb 	modified:   03_Orthogonality/053-orthogonal_matrices.ipynb

--- a/03_Orthogonality/051-orthogonal_orthonormal_bases.ipynb
+++ b/03_Orthogonality/051-orthogonal_orthonormal_bases.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "---\n",
     "title: Orthogonal and Orthonormal Bases\n",
-    "subject: Inner Products and Norms\n",
+    "subject: Orthogonality\n",
     "subtitle: \n",
     "short_title: Orthogonal and Orthonormal Bases\n",
     "authors:\n",
