--- a/03_Orthogonality/052-gram_schmidt.ipynb
+++ b/03_Orthogonality/052-gram_schmidt.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "---\n",
     "title: The Gram-Schmidt Process\n",
-    "subject: Inner Products and Norms\n",
+    "subject: Orthogonality\n",
     "subtitle: \n",
     "short_title: The Gram-Schmidt Process\n",
     "authors:\n",
