--- a/03_Orthogonality/053-orthogonal_matrices.ipynb
+++ b/03_Orthogonality/053-orthogonal_matrices.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: The Gram-Schmidt Process\n",
-    "subject: Orthogonal Matrices and the QR Decomposition\n",
+    "title: Orthogonal Matrices\n",
+    "subject:  Orthogonality\n",
     "subtitle: \n",
-    "short_title: Orthogonal Matrices and the QR Decomposition\n",
+    "short_title: Orthogonal Matrices\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
