--- a/02_Inner_Products_and_Norms/042-angle.ipynb
+++ b/02_Inner_Products_and_Norms/042-angle.ipynb
@@ -67,7 +67,7 @@
     "Our starting point in defining the notion of angle in a general inner product space is the familiar formula\n",
     "\\begin{equation}\n",
     "\\label{angle_fam}\n",
-    "\\vv v . \\vv w = \\|\\vv v\\| \\|\\vv w\\| \\cos(\\theta),\n",
+    "\\vv v \\cdot \\vv w = \\|\\vv v\\| \\|\\vv w\\| \\cos(\\theta),\n",
     "\\end{equation}\n",
     "where $\\theta$ measures the angle between $\\vv v$ and $\\vv w$.\n",
     ":::{figure}../figures/04-angle.png\n",
@@ -76,17 +76,17 @@
     ":width: 200px\n",
     ":align: center\n",
     ":::\n",
-    "Since $\\|\\cos(\\theta)\\| \\leq 1$, we can bound the magnitude of $\\vv v . \\vv w$ as\n",
+    "Since $\\|\\cos(\\theta)\\| \\leq 1$, we can bound the magnitude of $\\vv v \\cdot \\vv w$ as\n",
     "\\begin{equation}\n",
     "\\label{cauchy_simple}\n",
-    "|\\vv v . \\vv w| \\leq \\|\\vv v\\| . \\|\\vv w\\|.\n",
+    "|\\vv v \\cdot \\vv w| \\leq \\|\\vv v\\|\\|\\vv w\\|.\n",
     "\\end{equation}\n",
     ":::{prf:theorem} Cauchy-Schwarz Inequality\n",
     ":label:cauchy_schwarz\n",
     "The simplest form of _Cauchy-Schwarz Inequality_ is [](#cauchy_simple), which holds for any inner product. That is, it is always true that\n",
     "\\begin{equation}\n",
     "\\label{cauchy}\n",
-    "|\\langle \\vv v , \\vv w \\rangle| \\leq \\|\\vv v\\| . \\|\\vv w\\| \\ \\textrm{for all} \\ \\vv v, \\vv w \\in V.\n",
+    "|\\langle \\vv v , \\vv w \\rangle| \\leq \\|\\vv v\\| \\|\\vv w\\| \\ \\textrm{for all} \\ \\vv v, \\vv w \\in V.\n",
     "\\end{equation}\n",
     "Here, $\\|\\vv v\\| = \\sqrt{\\langle \\vv v, \\vv v\\rangle}$ is the norm induced by the inner product, and $|\\cdot|$ denotes the absolute value of a real number. \n",
     ":::\n",
@@ -100,13 +100,13 @@
     "The [inequality](#cauchy) lets us define the following _generalized angle_ between any two vectors $\\vv v$ and $\\vv w$ in an inner product space:\n",
     "\\begin{equation}\n",
     "\\label{angle_defn}\n",
-    "\\cos(\\theta) = \\frac{\\langle \\vv v, \\vv w \\rangle}{\\|\\vv v\\|. \\|\\vv w\\|}\n",
+    "\\cos(\\theta) = \\frac{\\langle \\vv v, \\vv w \\rangle}{\\|\\vv v\\|\\|\\vv w\\|}\n",
     "\\end{equation}\n",
     ":::\n",
     "[](#angle_defn) makes sense because, by [](#cauchy), we know that\n",
     "\\begin{equation}\n",
     "\\label{angle_bounds}\n",
-    "-1 \\leq \\frac{\\langle \\vv v, \\vv w \\rangle}{\\|\\vv v\\|. \\|\\vv w\\|} \\leq 1.\n",
+    "-1 \\leq \\frac{\\langle \\vv v, \\vv w \\rangle}{\\|\\vv v\\|\\|\\vv w\\|} \\leq 1.\n",
     "\\end{equation}\n",
     "Hence, $\\theta$ is well defined, and unique if restricted to be in $[0, \\pi]$. "
    ]
@@ -136,7 +136,7 @@
     ":label:poly_eg\n",
     "We can also define angles between vectors in a generic vector space, for example, polynomials. For ${p(x) = a_0 + a_1 x +a_2x^2, q(x) = b_0 + b_1x + b_2x^2 \\in P^{(2)}}$, we define the $\\langle p, q\\rangle = a_0b_0 + a_1b_1 + a_2b_2$. This agrees with the standard [dot product](./041-inner.ipynb#dot-product-defn) applied to $\\vv p = \\bm a_0 \\\\ a_1 \\\\ a_2\\em, \\vv q = \\bm b_0 \\\\ b_1 \\\\ b_2\\em$ and hence immediately satisfies [this definition](./041-inner.ipynb#inner_defn).  The angle between $p(x)$ and $q(x)$ is computed as\n",
     "$$\n",
-    "\\cos(\\theta) = \\frac{\\langle p, q \\rangle}{\\|p\\|. \\|q\\|} = \\frac{\\langle \\vv p, \\vv q \\rangle}{\\|\\vv p\\|. \\|\\vv q\\|}.\n",
+    "\\cos(\\theta) = \\frac{\\langle p, q \\rangle}{\\|p\\| \\|q\\|} = \\frac{\\langle \\vv p, \\vv q \\rangle}{\\|\\vv p\\| \\|\\vv q\\|}.\n",
     "$$\n",
     "For example, if $p(x)  = 1 + x$ and $q(x) = -1 + x^2$, then $\\langle p, q \\rangle = -1$ and $\\| p \\| = \\sqrt{2}, \\| q \\| = \\sqrt{2}$, and ${\\cos(\\theta) = \\frac{-1}{2} \\Rightarrow \\theta = \\frac{2\\pi}{3}}$.\n",
     ":::\n",
